# 2_link_arm_rl

./: .gitignore  README.md  requirements.txt
env/: arm_env.py  twolink.xml
python_sim/: mujoco_node.py
rl_training/: evaluate.py  export_model.py  train.py
ros2_cpp/src/arm_controller/: CMakeLists.txt  package.xml
ros2_cpp/src/arm_controller/src/: controller_node.cpp
